test_data/daemonsets.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: DaemonSet
  metadata:
    annotations:
      deprecated.daemonset.template.generation: "1"
      objectset.rio.cattle.io/applied: H4sIAAAAAAAA/8xUTW/jNhD9K8WcKUVaf8QW0MMim0PQrmPY3l4CIxhRo5g1RQrkSI1h6L8XlJ21s/kqtj306OHj8+N7o7eHrTIFZPAFqbJmSQwCsFZ/kPPKGsgA69pftCkIqIixQEbI9mCwIsjAt1LnETukUm1B9GNfowxn2yanyO88UwUCpCNkZc1KVeQZqxoy02gtQGNO2gdOm/9Jkj1x7JSNJTJripW92KDfQAblIB1ejtLRpzIvL5PxaFQMZJKOi8F4QtMkTSfTwaQcE4IIsqQ17KzW5OLtwJ+xGVuQJ02SrQusqD1BJwCNsdxLfFeMKg7PPvGDeBNs/zLkood2CxlctKn45Tdlil+X5Fol6cN7R49P7n4Mf837TkAPWFBJjowkD9nd/nnIfb7HTTjJeyGg6V8/pXwwyqdllJbpOBpigtG0vMwjORlRmabpZU6XIfGTQxm7h [...]
      objectset.rio.cattle.io/id: svccontroller
      objectset.rio.cattle.io/owner-gvk: /v1, Kind=Service
      objectset.rio.cattle.io/owner-name: traefik
      objectset.rio.cattle.io/owner-namespace: kube-system
    creationTimestamp: "2021-07-05T09:36:45Z"
    generation: 1
    labels:
      objectset.rio.cattle.io/hash: f31475152fbf70655d3c016d368e90118938f6ea
      svccontroller.k3s.cattle.io/nodeselector: "false"
    managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:deprecated.daemonset.template.generation: {}
            f:objectset.rio.cattle.io/applied: {}
            f:objectset.rio.cattle.io/id: {}
            f:objectset.rio.cattle.io/owner-gvk: {}
            f:objectset.rio.cattle.io/owner-name: {}
            f:objectset.rio.cattle.io/owner-namespace: {}
          f:labels:
            .: {}
            f:objectset.rio.cattle.io/hash: {}
            f:svccontroller.k3s.cattle.io/nodeselector: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"9eb35b9f-1f16-4a0a-9f7b-c85ef1117be7"}:
              .: {}
              f:apiVersion: {}
              f:controller: {}
              f:kind: {}
              f:name: {}
              f:uid: {}
        f:spec:
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:app: {}
                f:svccontroller.k3s.cattle.io/svcname: {}
            f:spec:
              f:containers:
                k:{"name":"lb-port-80"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"DEST_IP"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"DEST_PORT"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"DEST_PROTO"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"SRC_PORT"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":80,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:hostPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:securityContext:
                    .: {}
                    f:capabilities:
                      .: {}
                      f:add: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                k:{"name":"lb-port-443"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"DEST_IP"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"DEST_PORT"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"DEST_PROTO"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"SRC_PORT"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":443,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:hostPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:securityContext:
                    .: {}
                    f:capabilities:
                      .: {}
                      f:add: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
              f:tolerations: {}
          f:updateStrategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
        f:status:
          f:currentNumberScheduled: {}
          f:desiredNumberScheduled: {}
          f:numberAvailable: {}
          f:numberReady: {}
          f:observedGeneration: {}
          f:updatedNumberScheduled: {}
      manager: k3s
      operation: Update
      time: "2021-07-05T09:36:52Z"
    name: svclb-traefik
    namespace: kube-system
    ownerReferences:
    - apiVersion: v1
      controller: true
      kind: Service
      name: traefik
      uid: 9eb35b9f-1f16-4a0a-9f7b-c85ef1117be7
    resourceVersion: "631"
    uid: ddce45fd-18ca-49fc-97d3-a8a5b7309f0c
  spec:
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: svclb-traefik
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: svclb-traefik
          svccontroller.k3s.cattle.io/svcname: traefik
      spec:
        containers:
        - env:
          - name: SRC_PORT
            value: "80"
          - name: DEST_PROTO
            value: TCP
          - name: DEST_PORT
            value: "80"
          - name: DEST_IP
            value: 10.43.184.160
          image: rancher/klipper-lb:v0.2.0
          imagePullPolicy: IfNotPresent
          name: lb-port-80
          ports:
          - containerPort: 80
            hostPort: 80
            name: lb-port-80
            protocol: TCP
          resources: {}
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
          - name: SRC_PORT
            value: "443"
          - name: DEST_PROTO
            value: TCP
          - name: DEST_PORT
            value: "443"
          - name: DEST_IP
            value: 10.43.184.160
          image: rancher/klipper-lb:v0.2.0
          imagePullPolicy: IfNotPresent
          name: lb-port-443
          ports:
          - containerPort: 443
            hostPort: 443
            name: lb-port-443
            protocol: TCP
          resources: {}
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
        - key: CriticalAddonsOnly
          operator: Exists
    updateStrategy:
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
      type: RollingUpdate
  status:
    currentNumberScheduled: 1
    desiredNumberScheduled: 1
    numberAvailable: 1
    numberMisscheduled: 0
    numberReady: 1
    observedGeneration: 1
    updatedNumberScheduled: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
