test_data/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2023-05-24T16:14:32Z"
    generation: 1
    name: ingdefault
    namespace: default
    managedFields: []
    resourceVersion: "39551"
    uid: 5facbac2-4678-4702-a731-4c616c0805b2
  spec:
    defaultBackend:
      service:
        name: defaultsvc
        port:
          name: http
    ingressClassName: default
    rules:
    - host: foo.com
      http:
        paths:
        - backend:
            service:
              name: svc
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - foo.com
      secretName: secret1
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2023-05-24T16:20:48Z"
    generation: 1
    name: test
    namespace: default
    resourceVersion: "40022"
    managedFields: []
    uid: b56ea7ab-5f82-4112-bd7b-cf5fa1d31891
  spec:
    defaultBackend:
      service:
        name: test
        port:
          number: 5701
    ingressClassName: nginx
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.49.2
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"test-ingress","namespace":"dev"},"spec":{"ingressClassName":"nginx","rules":[{"host":"demo.apps.mlopshub.com","http":{"paths":[{"backend":{"service":{"name":"hello-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2023-05-24T16:22:23Z"
    managedFields: []
    generation: 1
    name: test-ingress
    namespace: dev
    resourceVersion: "40095"
    uid: 75a4a34a-0859-4e8f-857b-c6769c8f79e0
  spec:
    ingressClassName: nginx
    rules:
    - host: demo.apps.mlopshub.com
      http:
        paths:
        - backend:
            service:
              name: hello-service
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.49.2
kind: List
metadata:
  resourceVersion: ""
