test_data/ingresses.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Ingress
  metadata:
    creationTimestamp: "2021-05-10T21:48:03Z"
    labels:
      component: apiserver
      provider: kubernetes
    managedFields: []
    name: kubernetes
    namespace: default
    resourceVersion: "189"
    uid: e5b251bc-ac4f-48d2-8725-51c9df4d0e7c
  spec:
    defaultBackend:
      resource:
        apiGroup: some-group
        kind: Service
        name: some-name
      service:
        name: some-service
        port:
          number: 8000
    ingressClassName: test-ingress
    rules:
    - host: ingress.example.com
      http:
        paths:
        - path: some-path
          pathType: some-path-type
          backend:
            resource:
              apiGroup: some-group-2
              kind: Service
              name: some-name-2
            service:
              name: some-2-service
              port:
                number: 8003
    tls:
    - hosts:
      - asdfasdf
      - asdfasdf
      - asfasdf
      secretName: some-secret-pogU
  status:
    loadBalancer:
      ingress:
      - hostname: asd;lfkj
        ip: 10.10.10.10
        ports:
        - error: some-error
          port: some-ports
          protocol: some-protocal
