test_data/ns.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2021-05-10T21:48:02Z"
    managedFields: []
    name: default
    resourceVersion: "4"
    uid: 9cbc82d2-bc3b-4997-bedf-662e86110097
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2021-05-10T21:48:02Z"
    managedFields: []
    name: kube-system
    resourceVersion: "16"
    uid: 6905938f-7c22-453b-8a26-e633808fcff3
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2021-05-10T21:48:02Z"
    managedFields: []
    name: kube-public
    resourceVersion: "20"
    uid: 4b8edf12-46b0-4e80-843b-e0c47f301e4c
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2021-05-10T21:48:02Z"
    managedFields: []
    name: kube-node-lease
    resourceVersion: "23"
    uid: b6a2061b-3172-405d-b408-67c6de68e656
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
